--- a/css/styles.css
+++ b/css/styles.css
@@ -3,39 +3,90 @@
     margin:0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Roboto", sans-serif;
 }
 
 body{
   width: 100vw;
   height: 100vh;
+  color: white;
+}
+
+.hidden{
+  display: none;
 }
 .navbar{
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-}
+  background-color:  #C1DFF0;
+  }
 .main-menu{
   display: flex;
-  
+  flex-grow: 2;
+  display:none;
   
 }
 
+.mobile-menu{
+  padding:1rem 0rem;
+  background-color:  #C1DFF0;
+}
+.mobile-item{
+text-align: center;
+padding:.25rem 0rem;
+color: white;
+font-size: 1rem;
+}
 .nav-item{
   list-style: none;
-  padding: .5rem 1rem;
+  padding: .5rem .5rem;
 }
 .logo>i{
   padding: .5rem 1rem;
   font-size: 1.5rem;
+  color: white;
 }
+.mobile i{
+  padding: .5rem 1rem;
+  font-size: 1.5rem;
+  color: white;
 
+ }
 
 .slide {  
   height: auto; 
-  width: 100vw;
+   width: 100vw;
 }
 
+/*Extra small devices (phones, 600px and down)*/
+@media only screen and (max-width: 600px) {
 
+} 
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+
+  .mobile, .mobile-menu{
+    display:none;
+  }
+.main-menu{
+  display: flex;
+  flex-direction: row;
+}
+} 
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+
+  .mobile, .mobile-menu{
+    display:none;
+  }
+.main-menu{
+  display: flex;
+  flex-direction: row;
+}
+}
 
 
 
