--- a/css/styles.css
+++ b/css/styles.css
@@ -26,13 +26,13 @@ h3 {
 }
 
 .para1 {
-  font-size: 24px;
+  font-size: 1.5rem;
   font-weight: bold;
   text-align: center;
 }
 
 .para2 {
-  font-size: 20px;
+  font-size: 1.25rem;
   text-align: center;
 }
 
@@ -42,10 +42,11 @@ h3 {
 }
 
 ul li {
-  font-size: 18px;
+  font-size: 1.125rem;
   list-style-type: none;
 }
 
+/* Section Services */
 .box1,
 .box2,
 .box3 {
@@ -67,8 +68,10 @@ h4 {
   margin: 10px 15px;
 }
 
+/* Section Team Logos */
 .official {
   color: #dc352f;
+  margin-toop: 18px;
 }
 
 .logo1,
@@ -76,3 +79,9 @@ h4 {
   padding: 10px;
   margin-right: 25px;
 }
+
+#teamLogo a > img:hover {
+  transform: scale(1.5);
+}
+
+/* Media Queries */
