--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,9 @@ body{
   flex-direction: row;
   justify-content: space-between;
   background-color:  #C1DFF0;
+  position: fixed;
+  top: 0;
+  width: 100%;
  
 
   }
@@ -33,17 +36,25 @@ body{
 .mobile-menu{
   padding:1rem 0rem;
   background-color:  #C1DFF0;
+  
 }
 .mobile-item{
 text-align: center;
 padding:.25rem 0rem;
 color: white;
 font-size: 1rem;
+margin-top: 1rem;
+}
+.mobile-item>a, .nav-item > a{
+  text-decoration: none;
+  color:white;
 }
 .nav-item{
   list-style: none;
   padding: .5rem .5rem;
 }
+
+
 .logo>i{
   padding: .5rem 1rem;
   font-size: 1.5rem;
@@ -59,10 +70,15 @@ font-size: 1rem;
 .slide {  
   object-fit:contain;
   width: 100vw;
+  margin-top: 2rem;
 }
+
+
 #map{
-  object-fit:contain;
+  
   width: 100vw;
+  height: 200px;
+  
 }
 /*Extra small devices (phones, 600px and down)*/
 @media only screen and (max-width: 600px) {
