Included main section, footer and Scrubby Icon

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,114 +1,421 @@
-
-*{
-    margin:0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Roboto", sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
 }
 
-body{
+body {
   width: 100vw;
   height: 100vh;
   color: white;
 }
 
-.hidden{
+.hidden {
   display: none;
 }
-.navbar{
+
+.navbar {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  background-color:  #C1DFF0;
+  background-color: #119da4;
   position: fixed;
   top: 0;
   width: 100%;
- 
+}
 
-  }
-.main-menu{
+.main-menu {
   display: flex;
   flex-grow: 2;
-  display:none;
-  
+  display: none;
 }
 
-.mobile-menu{
-  padding:1rem 0rem;
-  background-color:  #C1DFF0;
-  
-}
-.mobile-item{
-text-align: center;
-padding:.25rem 0rem;
-color: white;
-font-size: 1rem;
-margin-top: 1rem;
-}
-.mobile-item>a, .nav-item > a{
+.main-menu a,
+.mobile-menu a {
+  color: #fff;
   text-decoration: none;
-  color:white;
 }
-.nav-item{
+
+.mobile-menu {
+  padding: 1rem 0rem;
+  background-color: #c1dff0;
+}
+.mobile-item {
+  text-align: center;
+  padding: 0.25rem 0rem;
+  color: white;
+  font-size: 1rem;
+  margin-top: 1.25rem;
+}
+.nav-item {
   list-style: none;
-  padding: .5rem .5rem;
+  padding: 0.5rem 0.5rem;
 }
-
-
-.logo>i{
-  padding: .5rem 1rem;
+.logo > i {
+  padding: 0.5rem 1rem;
   font-size: 1.5rem;
   color: white;
 }
-.mobile i{
-  padding: .5rem 1rem;
+.mobile i {
+  padding: 0.5rem 1rem;
   font-size: 1.5rem;
   color: white;
+}
 
- }
-
-.slide {  
-  object-fit:contain;
+.slide {
+  height: auto;
   width: 100vw;
-  margin-top: 2rem;
 }
 
+.logo {
+  margin-left: 5px;
+}
 
-#map{
-  
+/* Main Section - Scrubby's info */
+.container {
+  background-image: linear-gradient(
+    to bottom,
+    #ffffff,
+    #f4f6fc,
+    #e6edf9,
+    #d5e6f6,
+    #c1dff0
+  );
+  color: #000;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Main section - Scrubby Introduction */
+#main {
+  text-align: center;
+}
+
+#main h1,
+h2,
+h3 {
+  color: #119da4;
+  text-align: center;
+}
+
+#main .para1 {
+  font-weight: bold;
+}
+
+/*  Commercial Washer and Dryer section */
+#commercial {
+  padding-top: 35px;
+  text-align: center;
+}
+
+.para2 {
+  font-size: 1.25rem;
+  text-align: center;
+}
+
+.wash,
+.dry {
+  text-align: center;
+}
+
+.washndry {
+  margin-top: 30px;
+  margin-bottom: 5px;
+}
+
+ul li {
+  font-size: 1.125rem;
+  list-style-type: none;
+}
+
+/* Section Services */
+#services {
+  margin-top: 45px;
+  margin-bottom: 45px;
+}
+
+.offer {
+  margin-bottom: 35px;
+}
+
+.box1,
+.box2,
+.box3 {
+  background-color: #fff;
+  border: 1px solid #000;
+  width: 230px;
+  height: 275px;
+  margin-bottom: 25px;
+  box-shadow: 6px 5px 5px #999;
+}
+
+h4 {
+  text-align: center;
+  margin-top: 25px;
+  margin-bottom: 10px;
+}
+
+.box1 p,
+.box2 p,
+.box3 p {
+  margin: 10px 15px;
+}
+
+/* Section Convenient */
+#convenient .para2 {
+  text-align: center;
+}
+
+/* Section Team Logos */
+#teamLogo {
+  margin-bottom: 35px;
+}
+
+.official {
+  color: #dc352f;
+  margin-top: 75px;
+  margin-bottom: 8px;
+  text-shadow: 4px 4px 8px #933430;
+  text-align: center;
+}
+
+.logo1,
+.logo2 {
+  padding: 10px;
+  margin-right: 25px;
+}
+
+#teamLogo a > img:hover {
+  transform: scale(1.4);
+}
+
+/* Map */
+#map {
   width: 100vw;
   height: 200px;
-  
 }
+/* Footer */
+#footer {
+  background-color: #119da4;
+  height: 130px;
+  width: 100%;
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-around;
+}
+
+#footer h4 {
+  color: #fff;
+  text-align: center;
+  text-shadow: 6px 6px 10px #125859;
+}
+
+.para3 {
+  color: #fff;
+  text-align: center;
+}
+
+.fab {
+  color: #fff;
+  padding: 5px;
+}
+
+.credits {
+  background-color: #0e6f72;
+  height: 25px;
+  width: 100%;
+}
+
+.credits p {
+  color: #fff;
+  font-size: 12px;
+  margin-top: 3px;
+  text-align: center;
+}
+
+#social i {
+  margin-top: 10px;
+}
+
+#social i:hover {
+  color: #c1dff0;
+}
+
 /*Extra small devices (phones, 600px and down)*/
 @media only screen and (max-width: 600px) {
-
-} 
-
-/* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {
-
-  .mobile, .mobile-menu{
-    display:none;
+  #main h1 {
+    margin-top: 60px;
+    margin-bottom: 35px;
   }
-.main-menu{
-  display: flex;
-  flex-direction: row;
+
+  #commercial h2 {
+    margin-bottom: 25px;
+  }
+
+  #main .para1 {
+    font-size: 1.25rem;
+    margin-bottom: 20px;
+  }
+
+  #main .para2,
+  #commercial .para2 {
+    font-size: 1rem;
+  }
+
+  ul li {
+    font-size: 0.95rem;
+  }
+
+  #commercial .para2 {
+    margin: 0 10px;
+  }
+
+  #convenient {
+    margin-bottom: -15px;
+  }
+
+  #convenient .para2 {
+    font-size: 1rem;
+  }
+
+  footer h4 {
+    font-size: 12px;
+  }
+
+  footer .para3 {
+    font-size: 10px;
+  }
 }
-} 
+
+/* Medium devices (landscape tablets, 601px and up) */
+@media only screen and (min-width: 601px) {
+  .mobile,
+  .mobile-menu {
+    display: none;
+  }
+  .main-menu {
+    display: flex;
+    flex-direction: row;
+  }
+
+  #main h1 {
+    font-size: 35px;
+    margin-top: 85px;
+    margin-bottom: 45px;
+  }
+
+  #main .para1 {
+    font-size: 1.35rem;
+    margin-bottom: 25px;
+  }
+
+  #main h2,
+  #commercial h2,
+  #services h2 {
+    margin-top: 35px;
+    font-size: 28px;
+  }
+
+  #commercial h2 {
+    margin-bottom: 25px;
+  }
+
+  #main .para2,
+  #commercial .para2 {
+    font-size: 1.2rem;
+    text-align: center;
+  }
+
+  .box1,
+  .box2 {
+    float: left;
+    margin-left: 45px;
+  }
+
+  .box3 {
+    display: block;
+    clear: both;
+    margin-left: 165px;
+  }
+
+  #convenient .para2 {
+    min-width: 500px;
+    padding: 0 10px;
+  }
+
+  .img {
+    width: 100px;
+    height: 100px;
+  }
+
+  .fa-facebook-f,
+  .fa-twitter,
+  .fa-instagram {
+    font-size: 1.6em !important;
+    padding: 0 7px;
+  }
+}
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
-
-  .mobile, .mobile-menu{
-    display:none;
+  .mobile,
+  .mobile-menu {
+    display: none;
   }
-.main-menu{
-  display: flex;
-  flex-direction: row;
+  .main-menu {
+    display: flex;
+    flex-direction: row;
+  }
+
+  #main h1 {
+    font-size: 45px;
+    margin-top: 90px;
+    margin-bottom: 45px;
+  }
+
+  #main h2,
+  #commercial h2,
+  #services h2 {
+    margin-top: 35px;
+    font-size: 36px;
+  }
+
+  #main .para1 {
+    font-size: 1.5rem;
+    margin-bottom: 20px;
+  }
+
+  #main .para2 {
+    margin-bottom: 25px;
+  }
+
+  #main .para2,
+  #commercial .para2 {
+    font-size: 1.4rem;
+    min-width: 875px;
+    text-align: center;
+  }
+
+  .box1,
+  .box2,
+  .box3 {
+    display: inline-block;
+    margin-left: 55px;
+  }
+
+  #convenient .para2 {
+    font-size: 18px;
+    min-width: 680px;
+    padding: 0 10px;
+  }
+
+  .fa-facebook-f,
+  .fa-twitter,
+  .fa-instagram {
+    font-size: 2em !important;
+    padding: 0 10px;
+  }
 }
-}
-
-
-
-
